Fix Google Maps API

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -15,10 +15,10 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
    <!-- BOOTSTRAP -->
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
    <!-- Custom CSS -->
-   <link rel="stylesheet" href="css/custom.css">
+   <link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
 <body>
@@ -125,10 +125,11 @@
    <!-- BOOTSTRAP -->
    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
    
-   <!-- Google Maps -->
-   <script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os"></script>
    <!-- Maps Custom JS -->
    <script type="text/javascript" src="js/google-maps.js"></script>
-
+   
+   <!-- Google Maps -->
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os&callback=initMap" async defer></script>
+   
 </body>
 </html>
