Install "xbee-api" and "serialport", change Google-maps script

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -129,7 +129,7 @@
    <script type="text/javascript" src="js/google-maps.js"></script>
    
    <!-- Google Maps -->
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os&callback=initMap" async defer></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os&callback=initialize" async defer></script>
    
 </body>
 </html>
