Add Simple Polylines to Maps

--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -1,3 +1,7 @@
+<!--http://www.bootply.com/render/129821-->
+<!--
+initMap
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,7 +28,7 @@
 <body>
    <!-- begin template -->
    <div class="navbar navbar-custom navbar-fixed-top">
-      <div class="navbar-header"><a class="navbar-brand" href="#">Bloom Bus</a>
+      <div class="navbar-header"><a class="navbar-brand" href="#">Brand</a>
          <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -59,77 +63,86 @@
       </div>
    </div>
 
-   <div id="map-canvas"></div>
-   
+   <div id="map" style="width:50%;"></div>
    <div class="container-fluid" id="main">
       <div class="row">
-         <div class="col-xs-4">
+         <div class="col-xs-6">
             <!--map-canvas will be postioned here-->
          </div>
-         <div class="col-xs-8" id="right">
+         <div class="col-xs-6" id="left">
+
             <h2>Bootstrap Google Maps Demo</h2>
-            
+
             <!-- item list -->
             <div class="panel panel-default">
                <div class="panel-heading"><a href="">Item heading</a></div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci
                quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.</p>
-            
+
             <hr>
-            
+
             <div class="panel panel-default">
                <div class="panel-heading"><a href="">Item heading</a></div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci
                quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.</p>
-            
+
             <hr>
-            
+
             <div class="panel panel-default">
                <div class="panel-heading"><a href="">Item heading</a></div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci
                quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.</p>
-            
+
             <hr>
-            
+
             <div class="panel panel-default">
                <div class="panel-heading"><a href="">Item heading</a></div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci
                quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.</p>
-            
+
             <hr>
             <!-- /item list -->
-            
+
             <p>
                <a href="http://www.bootply.com/render/129229">Demo</a> | <a href="http://bootply.com/129229">Source Code</a>
             </p>
-            
+
             <hr>
-            
+
             <p>
                <a href="http://bootply.com" target="_ext" class="center-block btn btn-primary">More Bootstrap Snippets on Bootply</a>
             </p>
-            
+
             <hr>
+
          </div>
+         
+
       </div>
    </div>
    <!-- end template -->
+
 
    <!-- JQUERY -->
    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
    <!-- BOOTSTRAP -->
    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   
+
    <!-- Maps Custom JS -->
    <script type="text/javascript" src="js/google-maps.js"></script>
-   
+
    <!-- Google Maps -->
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os&callback=initialize" async defer></script>
-   
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBM0NGGmZwQDYdzzDWmjwrGGNN2kDDr1os&callback=initMap" async defer></script>
+
+
+   <script>
+   </script>
+
 </body>
+
 </html>
