--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,53 +1,56 @@
-html,body{
-  	height:100%;
+html,
+body {
+   height: 100%;
 }
 
-body{
-  	padding-top:50px; /*padding for navbar*/
+body {
+   padding-top: 50px;
+   /*padding for navbar*/
 }
 
 .navbar-custom .icon-bar {
-	background-color:#fff;
+   background-color: #fff;
 }
 
 .navbar-custom {
-	background-color: #168ccc;
-    color:#fff;
+   background-color: #168ccc;
+   color: #fff;
 }
 
-.navbar-custom li>a:hover,.navbar-custom li>a:focus {
-	background-color:#49bfff;
+.navbar-custom li>a:hover,
+.navbar-custom li>a:focus {
+   background-color: #49bfff;
 }
 
-.navbar-custom a{
-    color:#fefefe;
+.navbar-custom a {
+   color: #fefefe;
 }
 
 .navbar-custom .form-control:focus {
-	border-color: #49bfff;
-	outline: 0;
-	-webkit-box-shadow: inset 0 0 0;
-	box-shadow: inset 0 0 0;
+   border-color: #49bfff;
+   outline: 0;
+   -webkit-box-shadow: inset 0 0 0;
+   box-shadow: inset 0 0 0;
 }
 
-#main, #main>.row {
-	height:100%;
+#main,
+#main>.row {
+   height: 100%;
 }
 
 #main>.row {
-    overflow-y:scroll;
+   overflow-y: scroll;
 }
 
 #right {
-	height:100%;
+   height: 100%;
 }
 
-#map-canvas {
-	width:33.3333%;
-    height:calc(100% - 0);
-    position:absolute;
-    left:1px;
-    top:50px;
-    bottom:0;
-    overflow:hidden;
+#map {
+   height: calc(100% - 0);
+   position: absolute;
+   left: 1px;
+   top: 50px;
+   bottom: 0;
+   overflow: hidden;
 }
