--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -8,13 +8,16 @@ body {
    /*padding for navbar*/
 }
 
-.navbar-custom .icon-bar {
-   background-color: #fff;
+i {
+   vertical-align: middle;
+   display: inline;
 }
 
+
+
 .navbar-custom {
-   background-color: #168ccc;
-   color: #fff;
+   background-color: #FFF;
+   color: #444;
 }
 
 .navbar-custom li>a:hover,
@@ -23,14 +26,20 @@ body {
 }
 
 .navbar-custom a {
-   color: #fefefe;
+   color: #444;
 }
 
-.navbar-custom .form-control:focus {
-   border-color: #49bfff;
-   outline: 0;
-   -webkit-box-shadow: inset 0 0 0;
-   box-shadow: inset 0 0 0;
+.navbar-custom .navbar-brand {
+   font-family:'Julius Sans One';
+   font-size: 30px;
+}
+
+.navbar-custom .menu {
+   border-color: #444;
+   position: absolute;
+   top: 10px;
+   right: 10px;
+   cursor: pointer;
 }
 
 #main,
