--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -13,34 +13,24 @@ i {
    display: inline;
 }
 
-
-
-.navbar-custom {
-   background-color: #FFF;
-   color: #444;
+.popover_bottom{
+   top: auto;
+   bottom: 55px;
 }
-
-.navbar-custom li>a:hover,
-.navbar-custom li>a:focus {
-   background-color: #49bfff;
+.popover_bottom:before {
+   display: none;
 }
-
-.navbar-custom a {
-   color: #444;
-}
-
-.navbar-custom .navbar-brand {
-   font-family:'Julius Sans One';
-   font-size: 30px;
-}
-
-.navbar-custom .menu {
-   border-color: #444;
+.popover_bottom:after {
    position: absolute;
-   top: 10px;
-   right: 10px;
-   cursor: pointer;
+   bottom: -15px;
+   left: 50%;
+   width: 0;
+   height: 0;
+   margin-left: -15px;
+   content: '';
+   border-left: 15px solid transparent;border-right: 15px solid transparent;border-top: 15px solid #fff;
 }
+
 
 #main,
 #main>.row {
@@ -56,10 +46,10 @@ i {
 }
 
 #map {
-   height: calc(100% - 0);
+   width: 100%;
    position: absolute;
-   left: 1px;
-   top: 50px;
-   bottom: 0;
+   left: 0;
+   top: 45px;
+   bottom: 51px;
    overflow: hidden;
 }
