--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:800');
+
 html,
 body {
    height: 100%;
@@ -8,9 +10,17 @@ body {
    /*padding for navbar*/
 }
 
-i {
+.title {
    vertical-align: middle;
-   display: inline;
+   font-family: 'Nunito', sans-serif;
+   font-weight: 800;
+   font-size: 1.25em;
+}
+
+i {
+   padding-left: 0.08em;
+   vertical-align: sub;
+   font-size: 1.2em !important;
 }
 
 .popover_bottom{
