--- a/client/views/index.html
+++ b/client/views/index.html
@@ -29,7 +29,8 @@ initMap
    <link rel="stylesheet" type="text/css" href="css/custom.css">
 
    <!-- FIREBASE -->
-   <script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase-database.js"></script>
    
    <!-- Moment.js -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
